test/corpus/identifiers.txt
========================
Traditional Identifiers
========================

let
  name = true;
  under_score = true;
  kebab-case = true;
  _private = true;
  x = true;
in true

---

(source_file
  (bind_expression
    bindings: (assignment
      identifier: (identifier)
      value: (boolean))
    bindings: (assignment
      identifier: (identifier)
      value: (boolean))
    bindings: (assignment
      identifier: (identifier)
      value: (boolean))
    bindings: (assignment
      identifier: (identifier)
      value: (boolean))
    bindings: (assignment
      identifier: (identifier)
      value: (boolean))
    body: (boolean)))

==========================
Identifiers with capitals
==========================

let
  camelCase = true;
  PascalCase = true;
  ALL_CAPS = true;
in true

---

(source_file
  (bind_expression
    bindings: (assignment
      identifier: (identifier)
      value: (boolean))
    bindings: (assignment
      identifier: (identifier)
      value: (boolean))
    bindings: (assignment
      identifier: (identifier)
      value: (boolean))
    body: (boolean)))

=========================
Identifiers with numbers
=========================

let
  trailing-number012 = true;
  middle_1Number = true;
in true

---

(source_file
  (bind_expression
  bindings: (assignment
    identifier: (identifier)
    value: (boolean))
  bindings: (assignment
    identifier: (identifier)
    value: (boolean))
  body: (boolean)))

====================
Invalid identifiers
====================

let
  0leadingnumber = true;
  -leadinghyphen = true;
in true

---

(source_file
  (bind_expression

  (ERROR (number))

  bindings: (assignment
    identifier: (identifier)
    value: (boolean))

  (ERROR
    (UNEXPECTED '-'))

  bindings: (assignment
    identifier: (identifier)
    value: (boolean))

  body: (boolean)))
